--- a/README
+++ b/README
@@ -5,3 +5,8 @@ docker run -d --name mycontainer -p 8080:8080 testt
 docker run testt
 
 docker container rm mycontainer -f 
+
+
+docker pull redis:latest 
+docker run --name redis-instance -dit redis
+set queue key aaaaaa
