--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 pip install -r requirements.txt
 
-docker build -t testt
+docker build . -t testt
 docker run -d --name mycontainer -p 8080:8080 testt
 docker run testt
 
